[gd_scene load_steps=5 format=3 uid="uid://di7ul4c0lti0h"]

[ext_resource type="FontFile" uid="uid://dx5eri8m2oqq8" path="res://assets/fonts/Catamaran-VariableFont_wght.ttf" id="1_3a1el"]
[ext_resource type="Script" path="res://scripts/win_level.gd" id="1_a36hw"]
[ext_resource type="AudioStream" uid="uid://boyfyteopcvkv" path="res://assets/sfx/selectBlip.wav" id="3_jughf"]

[sub_resource type="LabelSettings" id="LabelSettings_fsmoq"]
font = ExtResource("1_3a1el")
font_size = 100
font_color = Color(0, 0, 0, 1)

[node name="win_level" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a36hw")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="win_level_menu" type="HBoxContainer" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="left_margin" type="MarginContainer" parent="background/win_level_menu"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="background/win_level_menu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="background/win_level_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "WINNER"
label_settings = SubResource("LabelSettings_fsmoq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="background/win_level_menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="next_level" type="Button" parent="background/win_level_menu/VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_3a1el")
theme_override_font_sizes/font_size = 50
text = "Next level"

[node name="MarginContainer2" type="MarginContainer" parent="background/win_level_menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Repeat_level" type="Button" parent="background/win_level_menu/VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_3a1el")
theme_override_font_sizes/font_size = 50
text = "Repeat level"

[node name="MarginContainer3" type="MarginContainer" parent="background/win_level_menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="back_main_menu" type="Button" parent="background/win_level_menu/VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_3a1el")
theme_override_font_sizes/font_size = 50
text = "Back to main menu"

[node name="MarginContainer" type="MarginContainer" parent="background/win_level_menu"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jughf")
volume_db = -10.0

[connection signal="pressed" from="background/win_level_menu/VBoxContainer/next_level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="background/win_level_menu/VBoxContainer/Repeat_level" to="." method="_on_repeat_level_pressed"]
[connection signal="pressed" from="background/win_level_menu/VBoxContainer/back_main_menu" to="." method="_on_back_main_menu_pressed"]
